tests/fail/ShiftRight.java
package fail;

import java.lang.System;

public class ShiftRight {
    public static void main(String[] args){
        System.out.printl('a'/2);
    }
}